--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
    
   
   <a href="https://www.linkedin.com/in/harshittaneja/" class="linkedin" ><i class="fa fa-linkedin"></i></a>
-<a href="https://github.com/harshittaneja090/" class="github" ><i class="fa fa-github"></i></a>
+<a href="https://github.com/harshittaneja" class="github" ><i class="fa fa-github"></i></a>
 </div>
 
     
